tests/core/invalid/global-cycle/input.core
(core 0 (types) (defs
  (def example::a (fn Int Int)
    (lam (bind x Int) (global example::b)))
  (def example::b (fn Int Int)
    (lam (bind y Int) (global example::a)))))
